--- a/src/components/EmojiCell.css
+++ b/src/components/EmojiCell.css
@@ -1,5 +1,6 @@
 .emoji-cell {
     text-align: center;
+    flex: 1 0 18%;
 }
 
 .emoji-cell code {
@@ -8,9 +9,18 @@
 
 button {
     padding: 0;
-border: none;
-background: none;
-
+    border: none;
+    background: none;
 }
-button:focus {outline:0;}
-button:hover {cursor: pointer;}
+
+button:focus {
+    outline: 0;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+.emoji-cell Button {
+    font-family: Arial !important;
+}
