--- a/src/components/EmojiList.css
+++ b/src/components/EmojiList.css
@@ -1,4 +1,45 @@
 .emoji-grid {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr)
+    display: flex;
+    flex-direction: column;
+}
+
+.kaomojis {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.subcategory h1 {
+    text-transform: capitalize
+}
+
+/* .kaomojiSection{
+    border: 1.5px #000 solid;
+    margin: 10px;
+    padding: 5px;
+    border-radius: 15px 15px 15px 15px;
+    box-shadow: 2.5px 2.5px;
+} */
+
+.kaomojiSection {
+    padding: 20px 0px;
+}
+
+/* hr {
+    height: 12px;
+    border: 0;
+    box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
+    width: 90%;
+} */
+
+hr {
+    width: 90%;
+    height: 2px;
+    border: none;
+    color: #000;
+    background-color: #000;
+}
+
+h1 { 
+    padding-bottom: 10px;
 }
