--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -4,7 +4,7 @@
     width: 100vw;
 }
 
-code {
+/* code {
     webkit-transition: font-size .25s;
        -moz-transition: font-size .25s;
          -o-transition: font-size .25s;
@@ -12,7 +12,7 @@ code {
 }
 code:hover {
     font-size: 1.15em;
-}
+} */
 
 
 .kaomoji {
@@ -20,6 +20,10 @@ code:hover {
        -moz-transition: font-weight 3s;
          -o-transition: font-weight 3s;
             transition: font-weight 3s;
+}
+
+.kaomoji:hover {
+    color:#6E95DC;
 }
 
 .kaomoji:active {
